sw/source/filter/ww8/docxattributeoutput.cxx
@@ -8561,7 +8561,8 @@ DocxAttributeOutput::hasProperties DocxAttributeOutput::WritePostitFields()
         if (f->GetTextObject() != nullptr)
         {
             // richtext
-            data.lastParaId = GetExport().WriteOutliner(*f->GetTextObject(), TXT_ATN, bNeedParaId);
+            data.lastParaId
+                = GetExport().WriteOutliner(*f->GetTextObject(), TXT_ATN, bNeedParaId, true);
         }
         else
         {
@@ -8574,6 +8575,9 @@ DocxAttributeOutput::hasProperties DocxAttributeOutput::WritePostitFields()
                 aParaId = NumberToHexBinary(data.lastParaId);
             }
             m_pSerializer->startElementNS(XML_w, XML_p, FSNS(XML_w14, XML_paraId), aParaId);
+            m_pSerializer->startElementNS(XML_w, XML_r);
+            m_pSerializer->singleElementNS(XML_w, XML_annotationRef);
+            m_pSerializer->endElementNS(XML_w, XML_r);
             m_pSerializer->startElementNS(XML_w, XML_r);
             RunText(f->GetText());
             m_pSerializer->endElementNS(XML_w, XML_r);
