sw/source/filter/ww8/docxexport.cxx
@@ -2024,7 +2024,7 @@ bool DocxExport::ignoreAttributeForStyleDefaults( sal_uInt16 nWhich ) const
 }
 
 sal_Int32 DocxExport::WriteOutliner(const OutlinerParaObject& rParaObj, sal_uInt8 nTyp,
-                                    bool bNeedsLastParaId)
+                                    bool bNeedsLastParaId, bool bWriteAnnotRef)
 {
     const EditTextObject& rEditObj = rParaObj.GetTextObject();
     MSWord_SdrAttrIter aAttrIter( *this, rEditObj, nTyp );
@@ -2048,6 +2048,13 @@ sal_Int32 DocxExport::WriteOutliner(const OutlinerParaObject& rParaObj, sal_uInt
         aAttrIter.OutParaAttr(/*bCharAttr=*/false);
         SfxItemSet aParagraphMarkerProperties(m_rDoc.GetAttrPool());
         AttrOutput().EndParagraphProperties(aParagraphMarkerProperties, nullptr, nullptr, nullptr);
+
+        if (bWriteAnnotRef && n == 0)
+        {
+            m_pAttrOutput->GetSerializer()->startElementNS(XML_w, XML_r);
+            m_pAttrOutput->GetSerializer()->singleElementNS(XML_w, XML_annotationRef);
+            m_pAttrOutput->GetSerializer()->endElementNS(XML_w, XML_r);
+        }
 
         do {
             AttrOutput().StartRun( nullptr, 0 );
