sw/qa/extras/ooxmlexport/ooxmlexport22.cxx
@@ -118,6 +118,19 @@ DECLARE_OOXMLEXPORT_TEST(testTdf139418, "tdf139418.docx")
     CPPUNIT_ASSERT_EQUAL(sal_Int32(0), nPorLen3);
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testAnnotationRef)
+{
+    loadAndSave("comment-annotationref.docx");
+
+    // Check that the exported comment also has annotationRef
+    xmlDocUniquePtr pXmlComments = parseExport(u"word/comments.xml"_ustr);
+    CPPUNIT_ASSERT(pXmlComments);
+    // Wihtout the fix it fails with
+    // - Expected: 1
+    // - Actual  : 0
+    assertXPath(pXmlComments, "//w:comments/w:comment[1]/w:p[1]/w:r[1]/w:annotationRef");
+}
+
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
 
